--- a/app/src/main/res/menu/conductor_menu.xml
+++ b/app/src/main/res/menu/conductor_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/action_Historial"
+        android:title="Historial de Viajes"
+        app:showAsAction="never"></item>
+
     <item android:id="@+id/action_actualizar"
         android:title="Editar Perfil"
         app:showAsAction="never"></item>
