--- a/app/src/main/res/layout/activity_map_reserva_conductor.xml
+++ b/app/src/main/res/layout/activity_map_reserva_conductor.xml
@@ -5,8 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/colorPrimarioDark"
     tools:context=".actividades.conductor.MapReservaConductorActivity">
 
+    <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="150dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        />
 
     <Button
         android:id="@+id/btnComezarReserva"
@@ -14,9 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/anaranjado"
+        android:backgroundTint="@color/colorPrimarioDark"
         android:text="@string/IniciaeViaje"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+
+        />
 
     <Button
         android:id="@+id/btnTerminarReserva"
@@ -26,82 +36,99 @@
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/anaranjado"
         android:textColor="@color/white"
-        android:layout_margin="30dp"
-        android:visibility="gone"/>
-    <LinearLayout
+        android:visibility="gone"
+        android:layout_margin="30dp" />
+
+
+    <io.github.florent37.shapeofview.shapes.BubbleView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="170dp"
+        app:shape_bubble_arrowHeight="15dp"
+        app:shape_bubble_arrowWidth="15dp"
+        app:shape_bubble_arrowPosition="top"
+        app:shape_bubble_borderRadius="20dp"
+        android:layout_gravity="bottom"
+        >
 
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"/>
-
-        <androidx.cardview.widget.CardView
+        <View
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp">
+            android:background="@color/colorPrimarioDark" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="30dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageViewReservaCliente"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/man"
+                android:layout_gravity="center"
+                app:civ_border_width="3dp"
+                app:civ_border_color="@color/white"
+                android:layout_marginLeft="7dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_marginLeft="7dp"
+                >
 
-                <ImageView
-                    android:id="@+id/imageViewReservaCliente"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/icon_user"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/textViewDestinoReservaCliente"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:text="Lugar de recogida"
+                    android:layout_marginLeft="10dp"
+                    android:maxLines="2"
 
-                    <TextView
-                        android:id="@+id/textViewReservaCliente"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Nombre usuario"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="16sp"/>
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"/>
 
-                    <TextView
-                        android:id="@+id/textViewOrigenReservaCliente"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Lugar Destino"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/textViewOrigenReservaCliente"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Destino"
+                    android:layout_marginLeft="10dp"
+                    android:maxLines="2"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"/>
 
-                    <TextView
-                        android:id="@+id/textViewDestinoReservaCliente"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Lugar de recogida"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/textViewReservaCliente"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nombre del usuario"
+                    android:layout_marginLeft="10dp"
+                    android:maxLines="1"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="5dp"
+                    android:textSize="16sp"/>
 
-                    <TextView
-                        android:id="@+id/textViewEmailReservaCliente"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Email usuario"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="16sp"/>
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/textViewEmailReservaCliente"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email del usuario"
+                    android:layout_marginLeft="10dp"
+                    android:maxLines="1"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    />
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
 
+        </LinearLayout>
+
+    </io.github.florent37.shapeofview.shapes.BubbleView>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
