--- a/app/src/main/res/layout/activity_notificacion_reserva.xml
+++ b/app/src/main/res/layout/activity_notificacion_reserva.xml
@@ -17,12 +17,31 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@drawable/icon_map"
-                android:layout_gravity="center"
-                />
+            <io.github.florent37.shapeofview.shapes.DiagonalView
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:elevation="4dp"
+                app:shape_diagonal_angle="10"
+
+                app:shape_diagonal_position="bottom">
+
+                <!-- YOUR CONTENT -->
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimarioDark" />
+
+                <ImageView
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:src="@drawable/icon_map"
+                    android:layout_gravity="center|top"
+                    />
+
+            </io.github.florent37.shapeofview.shapes.DiagonalView>
+
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -40,7 +59,9 @@
                 android:text="Cr falsa con avenida false"
                 android:textAlignment="center"
                 android:textSize="17sp"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -58,7 +79,9 @@
                 android:text="Cr falsa con avenida false"
                 android:textAlignment="center"
                 android:textSize="17sp"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -72,6 +95,12 @@
                     android:orientation="vertical"
                     android:layout_weight="1"
                     android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_timer_black" />
+
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -97,6 +126,11 @@
                     android:orientation="vertical"
                     android:gravity="center">
 
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_map_black" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -120,7 +154,7 @@
                 android:id="@+id/textViewCounter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="10"
+                android:text="45"
                 android:textAlignment="center"
                 android:textSize="40sp"
                 android:layout_marginTop="25dp"/>
