--- a/app/src/main/res/layout/activity_map_reserva_conductor.xml
+++ b/app/src/main/res/layout/activity_map_reserva_conductor.xml
@@ -130,5 +130,20 @@
 
     </io.github.florent37.shapeofview.shapes.BubbleView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="180dp"
+        android:layout_marginRight="20dp"
+        app:contentPadding="10dp"
+        app:cardElevation="5dp">
+        <TextView
+            android:id="@+id/textViewTiempo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tiempo"/>
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
