--- a/app/src/main/res/layout/activity_calificacion_cliente.xml
+++ b/app/src/main/res/layout/activity_calificacion_cliente.xml
@@ -67,6 +67,24 @@
         android:textSize="17sp"
         android:layout_marginTop="5dp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Precio del viaje"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:id="@+id/textViewPrecio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0$"
+        android:textAlignment="center"
+        android:textSize="17sp"
+        android:layout_marginTop="5dp"/>
+
     <RatingBar
         android:id="@+id/barraCalificacion"
         android:layout_width="wrap_content"
