--- a/app/src/main/res/layout/activity_actualizar_perfil_conductor.xml
+++ b/app/src/main/res/layout/activity_actualizar_perfil_conductor.xml
@@ -26,7 +26,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimarioDark" />
+                android:background="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/textViewNameBookingDetail"
@@ -153,7 +153,7 @@
         android:layout_height="wrap_content"
         android:text="ACTUALIZAR PERFIL"
         android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/colorPrimarioDark"
+        app:backgroundTint="@color/anaranjado"
         android:layout_gravity="bottom"
         android:layout_margin="20dp"
         android:textColor="@color/white" />
