--- a/app/src/main/res/layout/activity_detalle_historial_reserva_conductor.xml
+++ b/app/src/main/res/layout/activity_detalle_historial_reserva_conductor.xml
@@ -23,7 +23,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/anaranjado"/>
+                android:background="@color/colorPrimary"/>
 
             <TextView
                 android:id="@+id/txtViewNombreDetallesReserva"
