--- a/app/src/main/res/layout/activity_detalles_solicitud.xml
+++ b/app/src/main/res/layout/activity_detalles_solicitud.xml
@@ -127,7 +127,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tiempo"
+                        android:text="Tiempo y distancia"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -152,21 +152,21 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/ic_map" />
+                        android:src="@drawable/ic_money" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Distancia"
+                        android:text="Precio"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textViewDistance"
+                        android:id="@+id/textViewPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0km"
+                        android:text="0$"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
 
@@ -189,7 +189,7 @@
         android:layout_height="wrap_content"
         android:text="SOLICITAR AHORA"
         android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/colorPrimarioDark"
+        app:backgroundTint="@color/anaranjado"
         android:layout_gravity="right|top"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
@@ -201,7 +201,7 @@
         android:layout_height="40dp"
         android:src="@drawable/ic_arrow_back"
         android:layout_gravity="left|top"
-        app:civ_circle_background_color="@color/colorPrimarioDark"
+        app:civ_circle_background_color="@color/colorPrimary"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
