--- a/app/src/main/res/layout/activity_map_reserva_conductor.xml
+++ b/app/src/main/res/layout/activity_map_reserva_conductor.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/colorPrimarioDark"
+        app:backgroundTint="@color/anaranjado"
         android:text="@string/IniciaeViaje"
         android:textColor="@color/white"
 
@@ -53,7 +53,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimarioDark" />
+            android:background="@color/colorPrimary" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -129,6 +129,21 @@
         </LinearLayout>
 
     </io.github.florent37.shapeofview.shapes.BubbleView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="180dp"
+        android:layout_marginRight="20dp"
+        app:contentPadding="10dp"
+        app:cardElevation="5dp">
+        <TextView
+            android:id="@+id/textViewTiempo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tiempo"/>
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
