--- a/app/src/main/res/layout/activity_notificacion_reserva.xml
+++ b/app/src/main/res/layout/activity_notificacion_reserva.xml
@@ -30,7 +30,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimarioDark" />
+                    android:background="@color/colorPrimary" />
 
                 <ImageView
                     android:layout_width="180dp"
